@@ -1025,6 +1025,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
     via aw)
 
+    HADOOP-10971. Add -C flag to make `hadoop fs -ls` print filenames only.
+    (Kengo Seki via aajisaka)
+
   IMPROVEMENTS
 >>>>>>> 3d0e2e5... HADOOP-8934. Shell command ls should include sort options (Jonathan Allen via aw)
 
